fix: adjusted transactions
